--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
   "name": "laba4",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js",
-    "dev": "nodemon server/server.js"
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.8.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "axios": "^1.8.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
-  }
+    "vite": "^6.3.2"
+  }, 
+  "type": "module"
+  
 }
